fixing spacing on projects

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -35,6 +35,7 @@ button {
     text-align: center;
     background: #80a4dd;
     border-bottom: 0;
+    border-radius: 0 0 15px 15px;
 }
 
 .sized {
